# car-scan

./: .gitignore  CarScan-Product-Spec.docx  README.md
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
android/app/src/main/java/com/carscan/app/: MainActivity.kt
android/app/src/main/java/com/carscan/app/bluetooth/: ElmConnection.kt  ElmMockAdapter.kt
android/app/src/main/java/com/carscan/app/obd/: ObdNative.kt  ObdTypes.kt
android/app/src/main/java/com/carscan/app/ui/: DtcActivity.kt  LiveDataActivity.kt
android/app/src/main/res/values/: strings.xml
obd/: CMakeLists.txt  build.bat  build.ps1
obd/docs/: 00-project-overview.txt  01-obd-types-explained.txt  02-obd-api-explained.txt  03-build-system-explained.txt  04-hex-utils-explained.txt  05-elm327-explained.txt  06-pid-explained.txt  07-sensor-explained.txt  08-dtc-explained.txt  09-vin-explained.txt
obd/include/obd/: obd.h  obd_types.h
obd/src/: dtc.c  dtc.h  elm327.c  elm327.h  hex_utils.c  hex_utils.h  pid.c  pid.h  sensor.c  sensor.h  vin.c  vin.h
obd/tests/: CMakeLists.txt  test_assert.h  test_data.h  test_dtc.c  test_elm327.c  test_hex_utils.c  test_pid.c  test_sensor.c  test_vin.c
